# Chess-game

./: .gitignore  LICENSE
Backend/: pyproject.toml
Backend/app/: main.py  router.py
Backend/app/api/v1/endpoints/: game.py
Backend/app/core/: game_manager.py
Frontend/: package-lock.json  package.json
Frontend/src/: App.jsx
Frontend/src/services/: gameApi.js
